--- a/Tribute-Page/css/styles.css
+++ b/Tribute-Page/css/styles.css
@@ -1,16 +1,71 @@
 
+html {
+    /* setting base font-size to 10px. 1rem === 10px*/
+    font-size: 10px;
+}
+
 body {
     /* background-image: url('https://images.unsplash.com/photo-1599193454898-fc8aa712a15c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover; */
-    color: black;
-    font-style: monospace;
-  
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;
+    color: #000000;
+    font-size: 1.6rem; 
+    text-align: center; 
+    line-height: 1.5;
     }
-    h2 {
-        text-align: center;
-        font-size: 28px;
-  
+
+    h1 {
+        font-size: 4rem; 
+        margin-bottom: 0;
     }
+
+    @media (max-width: 460px) {
+        h1 {
+            font-size: 3.5rem;
+            line-height: 1.2;
+        }
+    }
+    a:hover {
+        color: darkblue ;
+    }
+
+   #main {
+       background: whitesmoke;
+       margin: 30px 10px;
+       padding: 15px;
+       border-radius: 10px;
+   }
+   @media (max-width: 460px) {
+       #main {
+           margin: 0;
+       }
+   }
+
+   img {
+       max-width: 100%;
+       height: auto;
+       margin: 0 auto;
+       display: block;
+   }
+
+   #img-div {
+       background: white;
+       padding: 10px;
+       margin: 0;
+   }
+
+   #img-caption {
+       margin: 15px 0 5px 0;
+   }
+
+   @media (max-width: 460px) {
+       #img-caption {
+        font-size: 1.3rem;
+       }
+   }
+
+
+
   
